; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_sc26xx.c_sc26xx_shutdown.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_sc26xx.c_sc26xx_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_port = type { i32 }

@IMR_TXRDY = common dso_local global i32 0, align 4
@IMR_RXRDY = common dso_local global i32 0, align 4
@CR = common dso_local global i32 0, align 4
@CR_DIS_TX = common dso_local global i32 0, align 4
@CR_DIS_RX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uart_port*)* @sc26xx_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sc26xx_shutdown(%struct.uart_port* %0) #0 {
  %2 = alloca %struct.uart_port*, align 8
  store %struct.uart_port* %0, %struct.uart_port** %2, align 8
  %3 = load %struct.uart_port*, %struct.uart_port** %2, align 8
  %4 = load i32, i32* @IMR_TXRDY, align 4
  %5 = load i32, i32* @IMR_RXRDY, align 4
  %6 = or i32 %4, %5
  %7 = call i32 @sc26xx_disable_irq(%struct.uart_port* %3, i32 %6)
  %8 = load %struct.uart_port*, %struct.uart_port** %2, align 8
  %9 = load i32, i32* @CR, align 4
  %10 = load i32, i32* @CR_DIS_TX, align 4
  %11 = load i32, i32* @CR_DIS_RX, align 4
  %12 = or i32 %10, %11
  %13 = call i32 @WRITE_SC_PORT(%struct.uart_port* %8, i32 %9, i32 %12)
  ret void
}

declare dso_local i32 @sc26xx_disable_irq(%struct.uart_port*, i32) #1

declare dso_local i32 @WRITE_SC_PORT(%struct.uart_port*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
